[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "viliam mihalik", email = "viliam.mihalik@smartbase.sk" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_project"]

[tool.rye.workspace]
members = ["nested_lib"]